--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,15 @@ script:
     - (cd uninitialized && cargo test -v)
     - (cd io && cargo test -v)
     - (cd pod && cargo test -v $FEATURES)
+    - (cd codegen && cargo test)
+    - (cd tests && cargo test -v $FEATURES)
     - "[ $TRAVIS_RUST_VERSION != nightly ] || (cd macros && cargo test -v && cd doctest && cargo test -v)"
 
 before_deploy:
     - (cd uninitialized && cargo doc --no-deps -v && cargo package -v && cargo publish --token "$CRATES_IO_TOKEN" || true)
     - (cd io && cargo doc --no-deps -v && cargo package -v && cargo publish --token "$CRATES_IO_TOKEN" || true)
     - (cd pod && cargo doc --no-deps -v && cargo package -v && cargo publish --token "$CRATES_IO_TOKEN" || true)
+    - (cd codegen && cargo doc --no-deps -v && cargo package -v && cargo publish --token "$CRATES_IO_TOKEN" || true)
     - (cd macros && cargo doc --no-deps -v && cargo package -v && cargo publish --token "$CRATES_IO_TOKEN" || true)
 
 deploy:
@@ -40,6 +43,7 @@ deploy:
     file: target/package/uninitialized-$TRAVIS_TAG.crate
     file: target/package/nue-io-$TRAVIS_TAG.crate
     file: target/package/pod-$TRAVIS_TAG.crate
+    file: target/package/nue-codegen-$TRAVIS_TAG.crate
     file: target/package/nue-macros-$TRAVIS_TAG.crate
     skip_cleanup: true
     on:
