--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nue-macros"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["arcnmx"]
 
 description = "POD and binary data encoding I/O macros"
@@ -15,17 +15,18 @@ name = "nue_macros"
 plugin = true
 
 [dependencies.nue-codegen]
-version = "0.1"
+version = "0.2"
 path = "../codegen"
 default-features = false
 features = ["unstable"]
 
-[dev-dependencies.nue-io]
-version = "0.1"
-path = "../io"
+[dev-dependencies.nue]
+version = "0.2"
+features = ["unstable"]
+path = "../"
 
 [dev-dependencies.pod]
-version = "0.1"
+version = "0.2"
 features = ["unstable"]
 path = "../pod"
 
